<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:weightSum="2"
    android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        android:background="@color/colorLightBlue"
        app:cardCornerRadius="16dp"
        android:layout_weight="1"
        app:cardElevation="4dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvhoteloutbooking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hotel_out_tv_booking"
                android:textStyle="bold"
                android:textAlignment="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hoteloutrating"
                android:textAlignment="center"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tvhoteloutreviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hotel_out_tv_reviews"
                android:textAlignment="center"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        android:background="@color/colorLightBlue"
        android:layout_weight="1"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvhoteloutbooking2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hotel_out"
                android:textStyle="bold"
                android:textAlignment="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hoteloutrating"
                android:textAlignment="center"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tvhoteloutreviews2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hotel_out_tv_reviews"
                android:textAlignment="center"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>