<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/swiperefreshlayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.HomeActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
            android:id="@+id/apptitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/tb_title"
            android:textStyle="bold"
            android:fontFamily="sans-serif-smallcaps"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/apptitle"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_find_the_best_tour"
                android:textSize="25dp"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_country"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:textSize="18dp"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/countryreview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/country_item_view"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_popular_tour"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:textSize="18dp"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/populartourreview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/popular_tour_item_view"/>
        </LinearLayout>
        <include
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            layout="@layout/empty_view" />

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>