<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardCornerRadius="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="4">
        <ImageView
            android:id="@+id/tourimg"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:src="@drawable/thien_mu_pagoda"
            android:scaleType="centerCrop" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_popular_tours_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_popular_tours_name"
                android:textSize="15dp"
                android:textStyle="bold"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="18dp"/>
            <TextView
                android:id="@+id/tv_tour_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_tour_description"
                android:layout_marginStart="18dp"
                android:layout_marginTop="10dp"/>
            <TextView
                android:id="@+id/tv_tour_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_tour_price"
                android:textSize="25dp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginStart="18dp"/>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2.5"
            android:layout_gravity="end"
            android:gravity="center">

            <androidx.cardview.widget.CardView
                android:layout_width="31dp"
                android:layout_height="62dp"
                app:cardBackgroundColor="@color/color_green"
                app:cardCornerRadius="8dp">

                <TextView
                    android:id="@+id/tv_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/tv_rating"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/color_white"/>

                <RatingBar
                    style="@style/Widget.AppCompat.RatingBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="40dp"
                    android:numStars="1"
                    android:rating="1"
                    android:progressTint="@color/color_white"/>

            </androidx.cardview.widget.CardView>
        </RelativeLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>