<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorLightGreen">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:expandedTitleGravity="center"
            app:collapsedTitleGravity="center"
            app:contentScrim="@color/colorLightGreen"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">
            <Button
                android:id="@+id/btnback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_collapseMode="pin"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:drawableStart="@drawable/ic_chevron_left_black_24dp"/>
            <ImageView
                android:id="@+id/detailimage"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/thien_mu_pagoda"
                android:scaleY="1.5"
                android:scaleX="1.5"
                app:layout_collapseMode="parallax"/>
            <TextView
                android:id="@+id/detailplacename"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Title"
                android:text="@string/Detail_tv_place_name"
                android:textColor="@color/color_white"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginTop="130dp"
                android:textStyle="bold"
                android:textSize="20dp"/>
            <TextView
                android:id="@+id/detaillocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Koh Chaung Tai, Thailand"
                android:drawableStart="@drawable/ic_location_on_black_24dp"
                android:textColor="#C5C5C5"
                android:layout_marginTop="170dp"
                android:layout_marginLeft="@dimen/margin_medium"/>
            <RatingBar
                android:id="@+id/detailrating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                style="@style/Widget.AppCompat.RatingBar.Indicator"
                android:layout_marginTop="200dp"
                android:layout_marginLeft="@dimen/margin_medium"
                android:rating="5"
                android:progressTint="@color/colorLightBlue"/>
            <androidx.appcompat.widget.Toolbar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_collapseMode="pin"
                app:title="@string/Detail_tv_place_name"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="4"
            android:orientation="horizontal"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
            <ImageView
                android:id="@+id/detailimg"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:src="@drawable/ic_wifi_black_24dp"
                android:textAlignment="gravity"
                android:layout_marginTop="@dimen/margin_medium"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:src="@drawable/ic_brightness_7_black_24dp"
                android:textAlignment="gravity"
                android:layout_marginTop="@dimen/margin_medium"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:src="@drawable/ic_tag_faces_black_24dp"
                android:textAlignment="gravity"
                android:layout_marginTop="@dimen/margin_medium"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:src="@drawable/ic_wifi_black_24dp"
                android:textAlignment="gravity"
                android:layout_marginTop="@dimen/margin_medium"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="4"
            android:orientation="horizontal"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Detail_free_wifi"
                android:minLines="2"
                android:gravity="center"/>
            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Detail_free_wifi"
                android:minLines="2"
                android:gravity="center"/>
            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Detail_free_wifi"
                android:minLines="2"
                android:gravity="center"/>
            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Detail_free_wifi"
                android:minLines="2"
                android:gravity="center"/>
        </LinearLayout>
        <include layout="@layout/hotel_out"/>
        <TextView
            android:id="@+id/detaildescrption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:layout_margin="@dimen/margin_medium"/>
    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>